chore: synchronize progress